@@ -34,6 +34,8 @@ find_over_search = true
 max_queue_length = 1
 
 album_cover_path = /home/stefan/.cache/rhythmbox/covers/
+
+music_base_path = /var/lib/mpd/music/
 # If you'd like to fine-tune the individual locations of the cache data dirs
 # for the Cache data, or the Session saves, un-comment the desired settings
 # here:
