@@ -28,8 +28,8 @@ from pylons.i18n.translation import _, ungettext
 
 from fookebox.lib.base import BaseController, render
 from fookebox.model.jukebox import Jukebox
-from fookebox.model.mpdconn import Track
-from fookebox.model.albumart import Album
+from fookebox.model.mpdconn import Track, Album
+from fookebox.model.albumart import AlbumArt
 
 log = logging.getLogger(__name__)
 
@@ -71,7 +71,7 @@ class JukeboxController(BaseController):
 				raise
 
 		try:
-			song = jukebox.getCurrentSong()
+			track = jukebox.getCurrentSong()
 		except:
 			raise
 		finally:
@@ -82,22 +82,16 @@ class JukeboxController(BaseController):
 			'jukebox': enabled
 		}
 
-		if song:
-			log.debug("STATUS: Playing %s" % song)
-			songPos = int(song['timePassed'])
-
-			if 'time' in song:
-				songTime = int(song['time'])
-			else:
-				songTime = 0
+		if track:
+			log.debug("STATUS: Playing %s" % track)
+			songPos = int(track.timePassed)
+			songTime = track.time
 
 			total = "%02d:%02d" % (songTime / 60, songTime % 60)
 			position = "%02d:%02d" % (songPos / 60, songPos % 60)
 
-			track = Track()
-			track.load(song)
-
 			album = Album(track.artist, track.album)
+			album.add(track)
 
 			data['artist'] = track.artist
 			data['track'] = track.title
@@ -294,7 +288,8 @@ class JukeboxController(BaseController):
 			abort(400, 'Malformed base64 encoding')
 
 		album = Album(artist, album)
-		path = album.getCover()
+		art = AlbumArt(album)
+		path = art.get()
 
 		if path == None:
 			log.error("COVER: missing for %s/%s" % (artist, album))
